芯云软装+IT赋能

--- a/src/styles/color.css
+++ b/src/styles/color.css
@@ -3,7 +3,11 @@
 }
 
 .back-color1 {
-  background-color: #EB6866;
+  background-color: #BE7052;
+}
+
+.back-color2 {
+  background-color: #f1f1f1;
 }
 
 .color0 {
@@ -11,7 +15,7 @@
 }
 
 .color1 {
-  color: #EB6866;
+  color: #BE7052;
 }
 
 .color2 {
